# DIS

./: .env.dev.example  .env.example  .env.prod.example  .gitignore  Makefile  README.md  docker-compose.pentest.yml  docker-compose.prod.yml  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish-sdk.yml  publish-service.yml
_archive/: SECURITY.md
admin/: index.html  nginx.conf.template  package.json
demo/: README.md  demo_app.py
demo-authz/: README.md
demo-authz/backend/: .env.example  pyproject.toml
demo-authz/backend/src/: config.py  deps.py  main.py  routes.py
demo-authz/frontend/: .env.example
demo-authz/frontend-nextjs/: package-lock.json  package.json
demo-proxy/: README.md
demo-proxy/frontend/: index.html
demo/backend/: .env.example  pyproject.toml
demo/frontend/: package-lock.json
docs/: INTEGRATION.md  PLAN.md  SECURITY.md  index.md  security.md
docs/api/: auth.md  groups.md  index.md  permissions.md  schemas.md  users.md  workspaces.md
docs/contributing/: code-style.md  database.md  index.md  setup.md  structure.md  testing.md
docs/deployment/: docker.md  environment.md  index.md  production.md
docs/design/: security-hardening-v2.md
docs/getting-started/: configuration.md  index.md  installation.md  quickstart.md
docs/guide/: admin-panel.md  admin.md  architecture.md  authentication.md  authorization.md  groups.md  how-it-works.md  index.md  jwt.md  permissions.md  roles.md  service-apps.md  service-auth.md  tutorial.md  (+2 more)
pentest/: README.md  run_all.py
scripts/: release.sh
sdk/: .coverage  pyproject.toml
sdk/src/identity_sdk/: __init__.py  dependencies.py  middleware.py  permissions.py  types.py
sdk/src/sentinel_auth/: __init__.py  auth.py  authz.py  authz_middleware.py  dependencies.py  middleware.py  permissions.py  roles.py  sentinel.py  types.py
sdk/tests/: conftest.py  test_authz_client.py  test_authz_middleware.py  test_dependencies.py  test_middleware.py  test_permissions.py  test_roles.py  test_types.py
service/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
(+136 files in other folders)
