[project]
name = "daikon-identity-sdk"
version = "0.1.0"
description = "Daikon Identity SDK — JWT middleware, FastAPI dependencies, permission client"
requires-python = ">=3.12"
dependencies = [
    "pyjwt[crypto]>=2.10.0",
    "httpx>=0.28.0",
    "cryptography>=44.0.0",
    "pydantic>=2.10.0",
    "starlette>=0.40.0",
    "fastapi>=0.115.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/identity_sdk"]
