[project]
name = "demo-team-notes-authz"
version = "0.1.0"
description = "Team Notes — demo app showcasing Sentinel AuthZ mode (dual-token)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic-settings>=2.7.0",
    "sentinel-auth-sdk",
]

[tool.uv.sources]
sentinel-auth-sdk = { path = "../../sdk", editable = true }
